--- a/2/bff.ini
+++ b/2/bff.ini
@@ -2,7 +2,7 @@
 //远程公告内容
 
 <kl>内容<kl>
-//是否需要输入密码(kill)   kill=true 需要  ||| kill=flase 不需要
+//是否需要输入密码(kill)   kill=true 需要  ||| kill=false 不需要
 
 <ml>密码<ml>
 //远程密码设置
