--- a/2/bff.ini
+++ b/2/bff.ini
@@ -1,16 +1,16 @@
 <bn>内容<bn>
 //远程公告内容
 
-<kl>内容<kl>
+<kl>true<kl>
 //是否需要输入密码(kill)   kill=true 需要  ||| kill=false 不需要
 
-<ml>密码<ml>
+<ml>555666<ml>
 //远程密码设置
 
-<gi>qq号?<gi>
+<gi>657949738<gi>
 //qq号
 
-<yt><yt>
+<yt>true<yt>
 //是否强制更新(lp)   lp=true 需要  ||| lp=flase 不需要
 
 <lkl>链接<lkl>
